--- a/frontend/src/pages/Results/Results.css
+++ b/frontend/src/pages/Results/Results.css
@@ -1,26 +1,36 @@
 /* Reused CSS from Players.css and Home.css*/
 .results-page-container {
-  .hero{
+  .hero {
+    display: flex; 
+    align-items: center; 
+    justify-content: space-between; 
     background-color: transparent;
     width: 80%;
-    display: grid;
-    grid-template-columns: 0.65fr 1fr;
-    gap: 0;
-    .left-side{
-        margin-left: 40px;
-        h1{
-            font-size: 50px;
-        }
-    }
-    .right-side{
-        margin: 0px auto;
-        display: block;
-        text-align: left;
-        .player-welcome{
-            margin-bottom: 40px;
-        } 
-    }
-}
+    margin: 0 auto;
+    gap: 20px; 
+  }
+  
+  .hero .left-side {
+    flex: 0 0 auto; 
+    margin-left: 0;
+  }
+  
+  .hero .right-side {
+    flex: 1 1 auto; 
+    text-align: left; 
+  }
+  
+  .hero .title {
+    font-size: 50px;
+    font-weight: bold;
+    margin: 0;
+  }
+  
+  .hero .description {
+    font-size: 16px;
+    line-height: 1.5;
+    margin: 0;
+  }
 }
 
 .tournament-results-section {
@@ -49,4 +59,46 @@
 .tournament-row:nth-child(even) {
   background-color: #a3a3a3;
 }
-  
+
+.search-filters {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+  margin: 20px auto;
+  padding: 10px;
+  width: calc(100% - 20px);
+  max-width: 1600px;
+  background-color: #f9f9f9;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+  align-items: center; 
+}
+
+.search-input,
+.search-dropdown,
+.search-button {
+  flex: 1 1 calc(20% - 10px); 
+  min-width: 120px; 
+}
+
+.search-button {
+  flex: 1 1 100%; 
+  padding: 15px;
+  border: none;
+  background-color: green;
+  color: white;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 16px;
+  text-align: center;
+}
+
+.search-button:hover {
+  background-color: darkgreen;
+}
+
+.search-button:disabled {
+  background-color: lightgray;
+  cursor: not-allowed;
+}
